# DmNote

./: .all-contributorsrc  .gitignore  README.md  index.html  package-lock.json  package.json  test.css  test2.css  tsconfig.json  tsconfig.main.json  vite.config.ts
.github/workflows/: trigger-docs-sync.yml  update-website.yml
docs/: HANDLER_IMPROVEMENT.md  README.md  api-reference.md  custom-js-guide.md  ipc-channels.md  readme_en.md  readme_zh-cn.md  tauri-migration-log.md  tauri-migration-progress.md
docs/assets/: neonsign.css
docs/assets/webm/: counter.webm  overlay-lock.webm  plugin.webm  resize.webm
docs/content/en/: _meta.js  page.mdx
docs/content/ko/: _meta.js  page.mdx
docs/legacy/: HANDLER_IMPROVEMENT.md  api-reference.md
docs/plugin/: _meta.js  bridge-example.js  context-menu-example.js  custom-js-guide.md  dialog-components-demo.js  display-element-example.js  keystroke-visualizer.js  kps-new.js  kps-simple.js  kps.js  page.mdx  record.js  settings-example.js  settings-panel-example.js
docs/plugin/advanced/: page.mdx
docs/plugin/api-reference/: _meta.js
docs/plugin/bridge/: page.mdx
docs/plugin/custom-css/: _meta.js  page.mdx
docs/plugin/declarative-api/: page.mdx
docs/plugin/examples/: page.mdx
docs/plugin/getting-started/: page.mdx
docs/plugin/guide/: page.mdx
docs/plugin/index/: page.mdx
docs/plugin/kps/: kps.js
docs/plugin/record/: record.js
docs/plugin/settings/: page.mdx
docs/plugin/storage/: page.mdx
docs/plugin/template-syntax/: page.mdx
docs/plugin/ui-api/: page.mdx
docs/releases/: 1.5.0_en.md
plugin/: kps-new.js  kps.js
scripts/: build-portable-win.js  build-single-exe-win.js  download-webview2-fixed-runtime.js  ensure-main-built.js  run-with-edge-beta.js  sync-version.js
src-tauri/: Cargo.toml  Info.macos.plist  build.rs  default_keys.json  default_positions.json  tauri.conf.json  tauri.macos.conf.json  tauri.webview2-fixed.conf.json
src-tauri/capabilities/: dmnote-dev.json  main.json
src-tauri/crates/note_core/: Cargo.toml
src-tauri/crates/note_core/src/: buffer.rs  color.rs  lib.rs  system.rs  types.rs
src-tauri/crates/note_wasm/: Cargo.toml
src-tauri/crates/note_wasm/src/: lib.rs
src-tauri/icons/: icon.icns
src-tauri/permissions/: dmnote-allow-all.json
src-tauri/src/: app_state.rs  cursor.rs  defaults.rs  ipc.rs  keyboard.rs  keyboard_daemon.rs  keyboard_labels.rs  lib.rs  main.rs  models.rs  note_system.rs  store.rs
src-tauri/src/commands/: app.rs  css.rs  js.rs  keys.rs  mod.rs  note.rs  overlay.rs  plugin_storage.rs  preset.rs  settings.rs  system.rs
src-tauri/src/services/: css_watcher.rs  mod.rs  settings.rs
src/main/: main.js  main.ts  preload.ts  registerAliases.ts
src/main/app/: application.ts
src/main/core/: ipcRouter.ts  windowRegistry.ts
src/main/domains/: appDomain.ts  context.ts  cssDomain.ts  keyDomain.ts  overlayDomain.ts  presetDomain.ts  registerDomains.ts  settingsDomain.ts  systemDomain.ts
src/main/store/: appStore.ts  (+1 more)
src/types/: api.ts  app.ts  css.ts  electron.d.ts  global.d.ts  js.ts  keys.ts  noteSettings.ts  noteSettingsConstraints.ts  settings.ts  shortcuts.ts
(+236 files in other folders)
