[package]
name = "dm-note"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
parking_lot = "0.12"
log = "0.4"
fern = { version = "0.6", features = ["colored"] }
tauri = { version = "2.8.5", features = ["wry"] }
tauri-runtime-wry = "2.8.1"
once_cell = "1.19"
willhook = "0.3"
open = "5.1"
rfd = "0.14"
dirs-next = "2.0"
