[package]
name = "dm-note"
version = "0.1.0"
edition = "2021"
default-run = "dm-note"

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
parking_lot = "0.12"
log = "0.4"
notify = "6.1"
notify-debouncer-mini = "0.4"
fern = { version = "0.6", features = ["colored"] }
tauri = { version = "2.8.5", features = ["wry", "devtools"] }
tauri-runtime-wry = { version = "2.8.1", features = ["devtools"] }
once_cell = "1.19"
willhook = "0.3"
open = "5.1"
rfd = "0.14"
dirs-next = "2.0"
bincode = "1.3"
uuid = { version = "1", features = ["v4"] }
[target."cfg(windows)".dependencies]
windows = { version = "0.61.3", features = [
	"Win32_Foundation",
	"Win32_UI_WindowsAndMessaging",
	"Win32_UI_Input_KeyboardAndMouse",
	"Win32_Storage_FileSystem",
	"Win32_System_Threading",
	"Win32_Security",
	"Win32_System_Pipes",
	"Win32_System_IO"
] }
[patch.crates-io]
willhook = { path = "vendor/willhook" }
