[package]
name = "dm-note"
version = "1.5.0"
edition = "2021"
default-run = "dm-note"

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }
walkdir = "2.5"
zip = "0.6"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
parking_lot = "0.12"
log = "0.4"
notify = "6.1"
notify-debouncer-mini = "0.4"
fern = { version = "0.6", features = ["colored"] }
tauri = { version = "2.8.5", features = ["wry", "devtools", "macos-private-api"] }
tauri-runtime-wry = { version = "2.8.1", features = ["devtools"] }
once_cell = "1.19"
open = "5.1"
rfd = "0.14"
dirs-next = "2.0"
uuid = { version = "1", features = ["v4"] }
zip = "0.6"

[target."cfg(windows)".dependencies]
windows = { version = "0.61.3", features = [
	"Win32_Foundation",
	"Win32_UI_WindowsAndMessaging",
	"Win32_UI_Input",
	"Win32_Storage_FileSystem",
	"Win32_System_Threading",
	"Win32_System_Pipes",
	"Win32_System_LibraryLoader",
	"Win32_System_IO",
	"Win32_Security",
	"Win32_UI_Shell"
] }

[target."cfg(target_os = \"macos\")".dependencies]
rdev = "0.5.3"
objc = "0.2"
objc-foundation = "0.1"

# objc 크레이트의 매크로에서 발생하는 cfg 경고 억제
[lints.rust]
unexpected_cfgs = "allow"

# Release 프로필 최적화 (메모리/바이너리 크기 감소)
[profile.release]
lto = true
codegen-units = 1
opt-level = "z"  # 's'보다 더 공격적인 크기 최적화
strip = true
panic = "abort"

# 빌드 시 release 의존성도 최적화
[profile.release.package."*"]
opt-level = "z"
strip = true
